; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/oss/extr_vwsnd.c_ad1843_setup_adc.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/oss/extr_vwsnd.c_ad1843_setup_adc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [48 x i8] c"(lith=0x%p, framerate=%d, fmt=%d, channels=%d)\0A\00", align 1
@.str.1 = private unnamed_addr constant [13 x i8] c"da_fmt = %d\0A\00", align 1
@ad1843_C2C = common dso_local global i32 0, align 4
@ad1843_ADLF = common dso_local global i32 0, align 4
@ad1843_ADRF = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32, i32)* @ad1843_setup_adc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ad1843_setup_adc(i32* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  store i32 0, i32* %9, align 4
  %10 = load i32*, i32** %5, align 8
  %11 = load i32, i32* %6, align 4
  %12 = load i32, i32* %7, align 4
  %13 = load i32, i32* %8, align 4
  %14 = call i32 @DBGEV(i8* getelementptr inbounds ([48 x i8], [48 x i8]* @.str, i64 0, i64 0), i32* %10, i32 %11, i32 %12, i32 %13)
  %15 = load i32, i32* %7, align 4
  switch i32 %15, label %21 [
    i32 129, label %16
    i32 128, label %17
    i32 130, label %18
    i32 131, label %19
    i32 132, label %20
  ]

16:                                               ; preds = %4
  store i32 1, i32* %9, align 4
  br label %23

17:                                               ; preds = %4
  store i32 1, i32* %9, align 4
  br label %23

18:                                               ; preds = %4
  store i32 1, i32* %9, align 4
  br label %23

19:                                               ; preds = %4
  store i32 2, i32* %9, align 4
  br label %23

20:                                               ; preds = %4
  store i32 3, i32* %9, align 4
  br label %23

21:                                               ; preds = %4
  %22 = call i32 @ASSERT(i32 0)
  br label %23

23:                                               ; preds = %21, %20, %19, %18, %17, %16
  %24 = load i32, i32* %9, align 4
  %25 = call i32 @DBGPV(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.1, i64 0, i64 0), i32 %24)
  %26 = load i32, i32* %6, align 4
  %27 = icmp sge i32 %26, 4000
  br i1 %27, label %28, label %31

28:                                               ; preds = %23
  %29 = load i32, i32* %6, align 4
  %30 = icmp sle i32 %29, 49000
  br label %31

31:                                               ; preds = %28, %23
  %32 = phi i1 [ false, %23 ], [ %30, %28 ]
  %33 = zext i1 %32 to i32
  %34 = call i32 @ASSERT(i32 %33)
  %35 = load i32*, i32** %5, align 8
  %36 = load i32, i32* %6, align 4
  %37 = call i32 @ad1843_write_bits(i32* %35, i32* @ad1843_C2C, i32 %36)
  %38 = load i32*, i32** %5, align 8
  %39 = load i32, i32* %9, align 4
  %40 = load i32, i32* %9, align 4
  %41 = call i32 @ad1843_write_multi(i32* %38, i32 2, i32* @ad1843_ADLF, i32 %39, i32* @ad1843_ADRF, i32 %40)
  ret void
}

declare dso_local i32 @DBGEV(i8*, i32*, i32, i32, i32) #1

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i32 @DBGPV(i8*, i32) #1

declare dso_local i32 @ad1843_write_bits(i32*, i32*, i32) #1

declare dso_local i32 @ad1843_write_multi(i32*, i32, i32*, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
